@@ -323,7 +323,7 @@
 #define __NR_pkey_alloc 289
 #define __NR_pkey_free 290
 #define __NR_statx 291
-#define __NR_io_pgetevents 291
+#define __NR_io_pgetevents 292
 #define __NR_rseq 293
 
 #undef __NR_syscalls
